# OverPaint

./: CMakeLists.txt  CompileShaders.bat
include/VG/: Notes.txt  vg.h
include/VG/include/: Flags.h
src/: BufferDraw.h  Input.cpp  Input.h  Keys.h  SpanSet.h  Spline.cpp  Spline.h  Stack.h  StateMachine.h  Vertex.h  Window.cpp  Window.h
src/shaders/: shader.frag  shader.vert  shaderFrag.spv  shaderVert.spv
tests/: Source.cpp  SpanSetTest.cpp  SplineTest.cpp
